<resources>
    <string name="app_name">CazaOfertaEC4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_usuario">Usuario 001</string>
    <string name="nav_header_correousuario">usuario_001@gmail.com</string>
    <string name="nav_header_desc"> </string>
    <string name="action_report">Reportar bug</string>
    <string name="action_salir">Salir</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Mi Perfil</string>
    <string name="menu_promos">Nueva Promocion</string>
    <string name="menu_us">Nosotros</string>
    <string name="menu_contacus">Contactanos</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="select_category_prompt">Selecciona una categoría</string>
    <string-array name="product_categories">
        <item>Bebidas y alimentos</item>
        <item>Productos para el hogar</item>
        <item>Productos para uso personal</item>
        <item>Otros</item>
    </string-array>
</resources>