<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/profileFragment"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/promosFragment"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_promos" />
        <item
            android:id="@+id/usFragment"
            android:icon="@drawable/ic_menu_us"
            android:title="@string/menu_us" />
        <item
            android:id="@+id/contacusFragment"
            android:icon="@drawable/ic_menu_contacus"
            android:title="@string/menu_contacus" />
    </group>
</menu>