<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.cazaofertaec4.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/promosFragment"
        android:name="com.example.cazaofertaec4.ui.promos.PromosFragment"
        android:label="@string/menu_promos"
        tools:layout="@layout/fragment_promos" />
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.cazaofertaec4.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/contacusFragment"
        android:name="com.example.cazaofertaec4.ui.contacus.ContacusFragment"
        android:label="@string/menu_contacus"
        tools:layout="@layout/fragment_contacus" />
    <fragment
        android:id="@+id/usFragment"
        android:name="com.example.cazaofertaec4.ui.us.UsFragment"
        android:label="@string/menu_us"
        tools:layout="@layout/fragment_us" />

</navigation>